Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -46,7 +46,7 @@
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('seaborn')\n",
     "\n",
-    "data = pd.read_csv(\"Advertising.csv\")"
+    "data = pd.read_"
    ]
   },
   {
